@@ -1,0 +1,60 @@
+.\"                                      Hey, EMACS: -*- nroff -*-
+.\" First parameter, NAME, should be all caps
+.\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
+.\" other parameters are allowed: see man(7), man(1)
+.TH MS-SYS 1 "February 19, 2003"
+.\" Please adjust this date whenever revising the manpage.
+.\"
+.\" Some roff macros, for reference:
+.\" .nh        disable hyphenation
+.\" .hy        enable hyphenation
+.\" .ad l      left justify
+.\" .ad b      justify to both left and right margins
+.\" .nf        disable filling
+.\" .fi        enable filling
+.\" .br        insert line break
+.\" .sp <n>    insert n+1 empty lines
+.\" for manpage-specific macros, see man(7)
+.SH NAME
+ms-sys \- write Microsoft boot block
+.SH SYNOPSIS
+.B ms-sys
+.RI "[options] [device]"
+.SH DESCRIPTION
+This manual page documents briefly the
+.B ms-sys
+command.
+This manual page was written for the Debian distribution
+because the original program does not have a manual page.
+.PP
+.\" TeX users may be more comfortable with the \fB<whatever>\fP and
+.\" \fI<whatever>\fP escape sequences to invode bold face and italics, 
+.\" respectively.
+\fBms-sys\fP is for writing a Microsoft compatible boot record.
+.SH OPTIONS
+A summary of options is included below.
+.TP
+.B \-h, \-\-help
+Show summary of options.
+.TP
+.B \-1, \-\-fat12
+Write a FAT12 floppy boot record to device.
+.TP
+.B \-3, \-\-fat32
+Write a FAT32 partition boot record to device.
+.TP
+.B \-f, \-\-force
+Force writing of boot record.
+.TP
+.B \-v, \-\-version
+Show program version.
+.TP
+.B \-m, \-\-mbr
+Write a master boot record to device.
+.TP
+.B \-w, \-\-write
+Write automatically selected boot record to device.
+.br
+.SH AUTHOR
+This manual page was written by Gurkan Sengun <gurkan@linuks.mine.nu>,
+for the Debian GNU/Linux system (but may be used by others).
